Scan-Matching-Localisation/error
[ 66%] Building CXX object CMakeFiles/cloud_loc.dir/helper.cpp.o
/home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/helper.cpp:42:8: error: ambiguating new declaration of ‘double getDistance(Point, Point)’
   42 | double getDistance(Point p1, Point p2) {
      |        ^~~~~~~~~~~
In file included from /home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/helper.cpp:1:
/home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/helper.h:111:7: note: old declaration ‘float getDistance(Point, Point)’
  111 | float getDistance(Point p1, Point p2);
      |       ^~~~~~~~~~~
/home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/helper.cpp:46:8: error: ambiguating new declaration of ‘double minDistance(Point, std::vector<Point>)’
   46 | double minDistance(Point p1, std::vector<Point> points) {
      |        ^~~~~~~~~~~
In file included from /home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/helper.cpp:1:
/home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/helper.h:112:7: note: old declaration ‘float minDistance(Point, std::vector<Point>)’
  112 | float minDistance(Point p1, std::vector<Point> points);
      |       ^~~~~~~~~~~
make[2]: *** [CMakeFiles/cloud_loc.dir/build.make:76: CMakeFiles/cloud_loc.dir/helper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:76: CMakeFiles/cloud_loc.dir/all] Error 2
make: *** [Makefile:84: all] Error 2


